@@ -4,23 +4,21 @@ import com.scyr.chat.cache.Cache;
 import com.scyr.chat.config.ChatConfig;
 import com.scyr.chat.entity.OpenAiServiceInfo;
 import com.scyr.chat.exception.ChatException;
-import com.scyr.chat.util.HttpUtil;
-import com.theokanning.openai.OpenAiService;
-import com.theokanning.openai.completion.CompletionRequest;
+import com.scyr.chat.openai.OpenAiService;
+import com.scyr.chat.openai.domain.MessageContext;
+import com.scyr.chat.openai.domain.request.CompletionRequest;
 import jakarta.annotation.PostConstruct;
 import jakarta.annotation.Resource;
+import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 
-import java.time.Duration;
-import java.time.LocalDate;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Queue;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Component
@@ -29,24 +27,18 @@ public class ChatGPTService {
     @Resource
     private ChatConfig chatConfig;
 
-    private CompletionRequest.CompletionRequestBuilder completionRequestBuilder;
-
     @PostConstruct
     public void init() {
-        //ChatGPT
-        completionRequestBuilder = CompletionRequest.builder()
-                .model(chatConfig.getChatGPT().getModel())
-                .temperature(chatConfig.getChatGPT().getTemperature())
-                .maxTokens(chatConfig.getChatGPT().getMaxToken());
         for (String apiKey : chatConfig.getTokens()) {
             apiKey = apiKey.trim();
             if (StringUtils.isNotBlank(apiKey)) {
+                OpenAiService openAiService = new OpenAiService(apiKey, chatConfig.getTimeoutSeconds());
                 Cache.OPEN_AI_SERVICE_INFO_MAP.put(apiKey, new OpenAiServiceInfo(
-                        new OpenAiService(apiKey, Duration.ofSeconds(chatConfig.getTimeOutSeconds())),
+                        openAiService,
                         apiKey,
-                        HttpUtil.getApiKeyBalance(apiKey)
+                        openAiService.getApiKeyBalance()
                 ));
-                log.info("apiKey为 {} 的账号初始化成功", apiKey);
+                log.info("api key: {} account initialization succeeded", apiKey);
             }
         }
     }
@@ -56,24 +48,14 @@ public class ChatGPTService {
         OpenAiServiceInfo openAiServiceToUse = null;
         // 如果这个sessionId 是已经有过对话的，则先拿出上一次使用的那个 apiKey 对应的service
         if (Cache.SESSION_ACTIVE_MAP.containsKey(sessionId)) {
-            openAiServiceToUse = Cache.OPEN_AI_SERVICE_INFO_MAP.get(Cache.SESSION_ACTIVE_MAP.get(sessionId).getLastUseApiKey());
-            // 被定时任务判断为额度不够后，从OPEN_AI_SERVICE_INFO_MAP删除后，里get到的是null，则同样需要重新选service
-            if (ObjectUtils.isEmpty(openAiServiceToUse)) {
-                openAiServiceToUse = null;
-            } else {
-                if (openAiServiceToUse.getAvailableBalance() <= Cache.MIN_API_KEY_BALANCE) {
-                    // 如果这个过期了，则要把这个 subUseAmount
-                    openAiServiceToUse.subUseAmount();
-                    openAiServiceToUse = null;
-                }
-            }
+            openAiServiceToUse = getOpenAiServiceInfo(sessionId);
         }
         // 如果这个sessionId 是首次来对话，或者之前使用的apiKey 额度已经用完，则重新选一个
         if (ObjectUtils.isEmpty(openAiServiceToUse)) {
             firstSight = true;
             List<OpenAiServiceInfo> hasBalance = Cache.OPEN_AI_SERVICE_INFO_MAP.values().stream()
                     .filter(value -> value.getAvailableBalance() > Cache.MIN_API_KEY_BALANCE)
-                    .sorted().collect(Collectors.toList());
+                    .sorted().toList();
             //获取使用次数最小的openAiService 否则获取map中的第一个
             openAiServiceToUse = hasBalance.stream().findFirst().orElse(null);
         }
@@ -88,38 +70,77 @@ public class ChatGPTService {
         return openAiServiceToUse;
     }
 
-    public CompletionRequest.CompletionRequestBuilder getBasicCompletionRequestBuilder() {
-        return this.completionRequestBuilder;
-    }
-
-    public String getPrompt(String sessionId, String newPrompt) throws ChatException {
-        StringBuilder prompt = new StringBuilder(String.format(Cache.BASIC_PROMPT, LocalDate.now()));
-        Map<String, Queue<String>> promptMap = Cache.PROMPT_CONTEXT_MAP;
-        if (promptMap.containsKey(sessionId)) {
-            for (String s : promptMap.get(sessionId)) {
-                prompt.append(s).append("\n");
-            }
-        }
-        prompt.append("User: ").append(newPrompt).append("\nChatGPT: ");
-        //一个汉字大概两个token
-        //预设回答的文字是提问文字数量的两倍
-        if (chatConfig.getChatGPT().getMaxToken() < (prompt.toString().length() + newPrompt.length()) * 2) {
-            if (null == promptMap.get(sessionId) || null == promptMap.get(sessionId).poll()) {
-                throw new ChatException("问题太长了");
-            }
-            return getPrompt(sessionId, newPrompt);
-        }
-        return prompt.toString();
-    }
-
-    public void updatePrompt(String sessionId, String prompt, String answer) {
-        Map<String, Queue<String>> promptMap = Cache.PROMPT_CONTEXT_MAP;
-        if (promptMap.containsKey(sessionId)) {
-            promptMap.get(sessionId).offer("User: " + prompt + "\nChatGPT: " + answer);
+    private static OpenAiServiceInfo getOpenAiServiceInfo(String sessionId) {
+        OpenAiServiceInfo openAiServiceToUse;
+        openAiServiceToUse = Cache.OPEN_AI_SERVICE_INFO_MAP.get(Cache.SESSION_ACTIVE_MAP.get(sessionId).getLastUseApiKey());
+        // 被定时任务判断为额度不够后，从OPEN_AI_SERVICE_INFO_MAP删除后，里get到的是null，则同样需要重新选service
+        if (ObjectUtils.isEmpty(openAiServiceToUse)) {
+            openAiServiceToUse = null;
         } else {
-            Queue<String> queue = new LinkedList<>();
-            queue.offer("User: " + prompt + "\nChatGPT: " + answer);
-            promptMap.put(sessionId, queue);
+            if (openAiServiceToUse.getAvailableBalance() <= Cache.MIN_API_KEY_BALANCE) {
+                // 如果这个过期了，则要把这个 subUseAmount
+                openAiServiceToUse.subUseAmount();
+                openAiServiceToUse = null;
+            }
+        }
+        return openAiServiceToUse;
+    }
+
+    public CompletionRequest.CompletionRequestBuilder getBasicCompletionRequestBuilder() {
+        return CompletionRequest.builder()
+                .model(OpenAiService.MODEL)
+                .temperature(chatConfig.getChatGPT().getTemperature())
+                .maxTokens(chatConfig.getChatGPT().getMaxToken());
+    }
+
+    public List<MessageContext> getQuestion(String sessionId, @NonNull MessageContext questionMessage) throws ChatException {
+        if (chatConfig.getChatGPT().getMaxToken() < StringUtils.length(questionMessage.getContent()) * 2) {
+            throw new ChatException("问题太长了");
+        }
+        List<MessageContext> resultList = new LinkedList<>();
+        Map<String, Queue<MessageContext>> questionContextMap = Cache.QUESTION_CONTEXT_MAP;
+        if (questionContextMap.containsKey(sessionId)) {
+            resultList = getMessageContexts(sessionId, questionMessage, resultList, questionContextMap);
+        }
+        resultList.add(questionMessage);
+        return resultList;
+    }
+
+    private List<MessageContext> getMessageContexts(String sessionId, MessageContext questionMessage, List<MessageContext> resultList, Map<String, Queue<MessageContext>> questionContextMap) {
+        Queue<MessageContext> messageContexts = questionContextMap.get(sessionId);
+        // 一个汉字大概两个token 预设回答的文字是提问文字数量的两倍
+        while (chatConfig.getChatGPT().getMaxToken() <
+                (2 *
+                        (
+                                new LinkedList<>(messageContexts).stream()
+                                        .mapToInt(messageContext -> StringUtils.length(messageContext.getContent()))
+                                        .sum()
+                                        +
+                                        StringUtils.length(questionMessage.getContent())
+                        )
+                )
+        ) {
+            // 从队首开始丢弃
+            messageContexts.poll();
+        }
+        // 如果丢完了（前一个回答 + 当前问题 超出了最大 max_tokens），就重新开启一个会话（不是很合理，可以优化）
+        if (ObjectUtils.isNotEmpty(messageContexts)) {
+            resultList = new LinkedList<>(messageContexts);
+        }
+        return resultList;
+    }
+
+    public void updatePrompt(String sessionId, MessageContext question, MessageContext answer) {
+        Map<String, Queue<MessageContext>> questionContextMap = Cache.QUESTION_CONTEXT_MAP;
+        if (questionContextMap.containsKey(sessionId)) {
+            Queue<MessageContext> queue = questionContextMap.get(sessionId);
+            queue.offer(question);
+            queue.offer(answer);
+        } else {
+            Queue<MessageContext> queue = new LinkedList<>();
+            queue.offer(question);
+            queue.offer(answer);
+            questionContextMap.put(sessionId, queue);
         }
     }
 
